Added the operator 365 details

--- a/portfolio_equipr.html
+++ b/portfolio_equipr.html
@@ -79,7 +79,7 @@
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Reworking</h1>
+              <h1 class="heading" data-aos="fade-up">Operator365</h1>
               <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains,
                 far from the countries.</h2>
             </div>
@@ -102,17 +102,45 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
 
-            <h2 class="heading-portfolio-single-h2">Reworking</h2>
-
+            <h2 class="heading-portfolio-single-h2">Operator365</h2>
             <div class="row justify-content-between align-items-stretch">
-
               <div class="col-lg-8">
-                <p><a href="images/work_2_full.jpg" data-fancybox="gal"><img src="images/work_2_full.jpg" alt="Image"
+                <p><a href="images/oprator1.png" data-fancybox="gal"><img src="images/oprator1.png" alt="Image"
                       class="img-fluid"></a></p>
-                <p><a href="images/work_2_a_full.jpg" data-fancybox="gal"><img src="images/work_2_a_full.jpg"
-                      alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/work_2_b_full.jpg" data-fancybox="gal"><img src="images/work_2_b_full.jpg"
-                      alt="Image" class="img-fluid"></a></p>
+                <h4>Features:</h4>
+                <li>Real-time Monitoring: The application enables operators to monitor plant activities in
+                  real-time,
+                  allowing for immediate response to any issues or discrepancies.</li>
+                <li>Task Management: Operators can efficiently manage tasks and assignments through the app,
+                  ensuring
+                  that all necessary actions are completed promptly and accurately.</li>
+                <li>Digital Documentation: Instead of relying on paper-based systems, the app facilitates
+                  digital
+                  documentation of all activities, including maintenance logs, equipment inspections, and safety
+                  checks.</li>
+                <li>Customizable Checklists: Operators can create customizable checklists tailored to specific
+                  plant
+                  requirements, ensuring that all critical processes are followed consistently.</li>
+                <li>Reporting and Analytics: The application may include reporting tools that provide insights
+                  into
+                  plant performance,
+                  downtime analysis, and compliance metrics, allowing operators to make data-driven decisions.
+                </li>
+                <li>Remote Access: Plant operators can access the application from anywhere, allowing them to
+                  monitor
+                  operations even when they are not on-site.</li>
+                <li>Integration with Existing Systems: The app can integrate with existing plant management
+                  systems,
+                  such as Enterprise Resource Planning (ERP) or Maintenance Management Systems (MMS), to ensure
+                  seamless data flow and information exchange.</li>
+                <li>User-friendly Interface: The application is designed with a user-friendly interface that is
+                  easy to
+                  navigate, ensuring minimal training requirements for operators.</li>
+                <li>Compliance and Regulatory Requirements: The app helps ensure compliance with industry
+                  regulations
+                  and standards by providing documentation and audit trails for all activities performed within
+                  the
+                  plant.</li>
               </div>
               <div class="col-lg-4 pl-lg-5">
                 <div class="unslate_co--sticky">
@@ -120,34 +148,45 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Project Description</span>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                          there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the
-                          Semantics, a large language ocean.</p>
+                        <p>365 Software is the provider of Rental Management Software designed for the Equipment Hire
+                          Industry. Our three-part rental software solution includes Maintain365, Allocate365 & Track365
+                          has been successfully deployed to many companies who offer a diverse range of Rental Services,
+                          including Wet Hire/Operated, Dry Hire/Non Operated and Cross Hire. By automating their
+                          business processes, our clients have been able to spend more time growing their businesses and
+                          less time following the paper trail that comes with manual, paper-based systems.</p>
                       </div>
                     </div>
 
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Project Date</span>
-                        <span class="detail-val">March 9th, 2020</span>
+                        <span class="detail-val">April 9th, 2020 to June 25th, 2021</span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Role</span>
-                        <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
+                        <span class="detail-val"><a>Flutter Developer</a>,
+                          <a>Application Developer</a></span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Client</span>
-                        <span class="detail-val">unslate</span>
+                        <span class="detail-val">Anthony Roche</span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Visit</span>
-                        <span class="detail-val"><a href="#">https:///</a></span>
+                        <a href="https://play.google.com/store/apps/details?id=com.software365&hl=en_SG">Operator365</a>
+                        <br />
+                        <span class="detail-label">New version:</span>
+                        <a href="https://play.google.com/store/apps/details?id=com.EQUIPROperator&hl=en&gl=US">EQUIPR
+                          Operator App</a>
+                        <br />
+                        <a href="https://equipr.software/operator-mobile-dockets-timesheets">EQUIPR
+                          Operator Site</a>
                       </div>
                     </div>
                   </div>
@@ -175,8 +214,6 @@
             </ul>
 
             <p class="site-copyright">
-
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright &copy;
               <script>
                 document.write(new Date().getFullYear());
