--- a/portfolio_equipr.html
+++ b/portfolio_equipr.html
@@ -194,6 +194,26 @@
               </div>
 
             </div>
+            <br />
+            <br /><br />
+            <br />
+            <div>
+              <div class="testimonial-v1">
+                <div class="testimonial-inner-bg">
+                  <span class="quote">&ldquo;</span>
+                  <blockquote>
+                    I have found Divyanshu to be a very easy to work with and he has provided insightful
+                    recommendations.
+                  </blockquote>
+                </div>
+
+                <div class="testimonial-author-info">
+                  <img src="images/andrew.jpeg" alt="Image">
+                  <h3>Andrew McIntyre</h3>
+                  <span class="d-block position">Application Support & Technical Writer @365 Software pty ltd.</span>
+                </div>
+              </div>
+            </div>
 
           </div>
         </div>
