Added chinesepod details

--- a/portfolio_chinesepod.html
+++ b/portfolio_chinesepod.html
@@ -79,11 +79,9 @@
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Reshape</h1>
-              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains,
-                far from the countries.</h2>
+              <h1 class="heading" data-aos="fade-up">Chinesepod</h1>
+              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Podcast</h2>
             </div>
-
           </div>
         </div>
 
@@ -101,48 +99,48 @@
       <div class="container">
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
-            <h2 class="heading-portfolio-single-h2">Reshape</h2>
+            <h2 class="heading-portfolio-single-h2">Chinesepod</h2>
 
             <div class="row gutter-v4 align-items-stretch mb-5">
               <div class="col-sm-6 col-md-6 col-lg-8 blog-post-entry">
 
-                <a href="images/post_1.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal"
+                <a href="images/chinesepod1.png" class="grid-item blog-item w-100 h-100" data-fancybox="gal"
                   data-caption="A nice caption will be place here">
                   <div class="overlay">
                     <div class="portfolio-item-content">
-                      <h3>A nice caption will be place here</h3>
+                      <h3>Unlock Mandarin Mastery with ChinesePod 🌟</h3>
                     </div>
                   </div>
-                  <img src="images/post_1.jpg" class="lazyload" alt="Image" />
+                  <img src="images/chinesepod1.png" class="lazyload" alt="Image" />
                 </a>
 
               </div>
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/post_2.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                <a href="images/chinesepod2.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
                   <div class="overlay"></div>
-                  <img src="images/post_2.jpg" class="lazyload" alt="Image" />
+                  <img src="images/chinesepod2.jpg" class="lazyload" alt="Image" />
                 </a>
               </div>
 
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
 
-                <a href="images/post_3.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                <a href="images/chinesepod3.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
                   <div class="overlay"></div>
-                  <img src="images/post_3.jpg" class="lazyload" alt="Image" />
+                  <img src="images/chinesepod3.jpg" class="lazyload" alt="Image" />
                 </a>
 
               </div>
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/post_4.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                <a href="images/chinesepod4.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
                   <div class="overlay"></div>
-                  <img src="images/post_4.jpg" class="lazyload" alt="Image" />
+                  <img src="images/chinesepod4.jpg" class="lazyload" alt="Image" />
                 </a>
               </div>
 
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/post_5.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                <a href="images/chinesepod5.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
                   <div class="overlay"></div>
-                  <img src="images/post_5.jpg" class="lazyload" alt="Image" />
+                  <img src="images/chinesepod5.jpg" class="lazyload" alt="Image" />
                 </a>
               </div>
 
@@ -154,68 +152,80 @@
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Project Date</span>
-                      <span class="detail-val">March 9th, 2020</span>
+                      <span class="detail-val">February 9th, 2020 to May 15th, 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Role</span>
-                      <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
+                      <span class="detail-val"><a>Flutter Developer</a>,
+                        <a>Application Developer</a></span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Client</span>
-                      <span class="detail-val">unslate</span>
+                      <span class="detail-val">Praxis Language Ltd.</span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Visit</span>
-                      <span class="detail-val"><a href="#">https:///</a></span>
+                      <a href="https://apps.apple.com/us/app/chinesepod-podcast/id1185380819">Chinesepod - Podcast |
+                        Appstore</a>
+                      <a href="https://www.chinesepod.com/">www.chinesepod.com</a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 pr-md-5">
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                  the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                  language ocean. A small river named Duden flows by their place and supplies it with the necessary
-                  regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
-                </p>
-              </div>
-              <div class="col-md-6 pl-md-5">
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                  life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the
-                  far World of Grammar.</p>
-              </div>
-            </div>
-
-            <div class="row justify-content-center mb-5">
-              <div class="col-md-12">
-                <div class="testimonial-v1">
-                  <div class="testimonial-inner-bg">
-                    <span class="quote">&ldquo;</span>
-                    <blockquote>
-                      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
-                      live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a
-                      large language ocean. A small river named Duden flows by their place and supplies it with the
-                      necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into
-                      your mouth.
-                    </blockquote>
-                  </div>
-
-                  <div class="testimonial-author-info">
-                    <img src="images/person_man_1.jpg" alt="Image">
-                    <h3>Eric Ingram</h3>
-                    <span class="d-block position">Product Designer @facebook</span>
-                  </div>
-
+                <div class="detail-v1">
+                  <span class="detail-label">Project Dexcription:</span>
+                  <p>ChinesePod is the ultimate language learning companion for anyone looking to master Mandarin
+                    Chinese. Whether you're a beginner or an advanced learner, ChinesePod offers a comprehensive
+                    platform designed to enhance your language skills through engaging and effective lessons.</p>
+                  <br />
+                  <h6>Personalized Learning Experience:</h6>
+                  <li>ChinesePod caters to learners of all levels, from absolute beginners to fluent
+                    speakers. With a vast library of lessons covering various topics and proficiency levels, you can
+                    customize your learning journey according to your needs and interests.</li>
+                  </br>
+                  <h6>Interactive Lessons:</h6>
+                  <li>Dive into immersive lessons that cover practical vocabulary, grammar structures, and cultural
+                    insights. Each lesson incorporates interactive exercises, audio dialogues, and real-life scenarios
+                    to
+                    enhance your understanding and retention of the language.</li></br>
+                  <h6>Flexible Learning Options:</h6>
+                  <li>Whether you prefer to learn on-the-go or at your own pace, ChinesePod offers flexible learning
+                    options to suit your lifestyle. Access lessons anytime, anywhere through the mobile app or website,
+                    and progress at a pace that works for you.</li></br>
+                  <h6>Comprehensive Curriculum:</h6>
+                  <li>From basic greetings and everyday conversations to advanced topics and specialized vocabulary,
+                    ChinesePod covers a wide range of subjects to help you develop well-rounded language proficiency.
+                  </li>
+                  </br>
                 </div>
               </div>
+              <div class="col-md-6 pl-md-5">
+
+                <h6>Native Speaker Content:</h6>
+                <li>Learn Mandarin from native speakers with authentic accents and natural speech patterns. ChinesePod
+                  ensures that you're exposed to real-life language usage, preparing you for meaningful interactions in
+                  Chinese-speaking environments.</li></br>
+                <h6>Progress Tracking and Assessments:</h6>
+                <li>Monitor your progress and track your improvement with built-in tools and assessments. Set goals,
+                  track your achievements, and stay motivated as you advance through the levels of proficiency.</li>
+                </br>
+                <h6>Community Engagement:</h6>
+                <li>Connect with fellow learners and language enthusiasts through ChinesePod's vibrant community forums
+                  and social media channels. Share experiences, ask questions, and collaborate with others to enhance
+                  your learning experience.</li></br>
+                <h6>Cross-Platform Compatibility:</h6>
+                <li>Access ChinesePod across multiple devices, including smartphones, tablets, and computers. Seamlessly
+                  switch between devices and pick up where you left off, ensuring uninterrupted learning wherever you
+                  are.</li></br>
+              </div>
             </div>
-
-
           </div>
         </div>
       </div>
