--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
                 applications. They excel in state management, platform integration, design patterns, testing, CI/CD
                 setup, third-party package integration, performance optimization, and problem-solving. They deliver
                 high-quality, efficient apps with a focus on user experience and maintainability.</p>
-              <p class="gsap-reveal"><a href="assets/cv.pdf" class="btn btn-outline-pill btn-custom-light"
-                  download>Download my CV</a></p>
+              <p class="gsap-reveal"><a href="assets/1_Divyanshu's Resume.pdf"
+                  class="btn btn-outline-pill btn-custom-light" download>Download my CV</a></p>
             </div>
           </div>
         </div>
