--- a/index.html
+++ b/index.html
@@ -130,23 +130,25 @@
             <div class="d-flex align-items-center mb-4 gsap-reveal gsap-reveal-filter">
               <h2 class="mr-auto heading-h2"><span class="gsap-reveal">Portfolio</span></h2>
 
-              <!-- <a href="#" class="text-white js-filter d-inline-block d-lg-none">Filter</a>
-              
+              <a href="#" class="text-white js-filter d-inline-block d-lg-none">Filter</a>
+
               <div class="filter-wrap">
                 <div class="filter ml-auto" id="filters">
                   <a href="#" class="active" data-filter="*">All</a>
-                  <a href="#" data-filter=".web">Web</a>
-                  <a href="#" data-filter=".branding">Branding</a>
-                  <a href="#" data-filter=".illustration">Illustration</a>
-                  <a href="#" data-filter=".packaging">Packaging</a>
+                  <a href="#" data-filter=".vehicle">Vehicle</a>
+                  <a href="#" data-filter=".social">Social</a>
+                  <a href="#" data-filter=".generic">Generic</a>
+                  <a href="#" data-filter=".learning">Learning</a>
+                  <a href="#" data-filter=".ecommerce">Ecommerce</a>
+                  <a href="#" data-filter=".erp">ERP</a>
                 </div>
-              </div> -->
+              </div>
             </div>
 
 
 
             <div id="posts" class="row gutter-isotope-item">
-              <div class="item branding packaging illustration col-sm-6 col-md-6 col-lg-6 isotope-mb-2 ">
+              <div class="item vehicle packaging illustration col-sm-6 col-md-6 col-lg-6 isotope-mb-2 ">
                 <a href="portfolio_wsac.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="1">
                   <div class="overlay">
@@ -159,7 +161,7 @@
                 </a>
               </div>
 
-              <div class="item branding packaging col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
+              <div class="item generic social col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_helpozzy.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page"
                   data-id="2">
                   <div class="overlay">
@@ -172,7 +174,7 @@
                 </a>
               </div>
 
-              <div class="item web packaging col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
+              <div class="item erp social col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_byebye.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="3">
                   <div class="overlay">
@@ -185,7 +187,7 @@
                 </a>
               </div>
 
-              <div class="item illustration packaging col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
+              <div class="item erp packaging col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_equipr.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="4">
                   <div class="overlay">
@@ -198,7 +200,7 @@
                 </a>
               </div>
 
-              <div class="item web branding col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
+              <div class="item social branding col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_lok.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="5">
                   <div class="overlay">
@@ -211,7 +213,7 @@
                 </a>
               </div>
 
-              <div class="item branding packaging col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
+              <div class="item ecommerce packaging col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_koshervalue.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="6">
                   <div class="overlay">
@@ -223,7 +225,7 @@
                   <img src="images/kosher.png" class="lazyload  img-fluid" alt="Images" />
                 </a>
               </div>
-              <div class="item branding packaging col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
+              <div class="item learning packaging col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_chinesepod.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="6">
                   <div class="overlay">
