--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </nav>
       <!-- END nav -->
 
-      <div class="cover-v1 jarallax" style="background-image: url('images/cover_bg.jpg');" id="home-section">
+      <div class="cover-v1 jarallax" style="background-image: url('images/cover_bg.jpeg');" id="home-section">
         <div class="container">
           <div class="row align-items-center">
 
@@ -92,10 +92,10 @@
                 <span class="heading gsap-reveal-hero" style="color:#D63447">KORAT</span>
               </h1>
               <h2>
-                <span>I’m a passionate</span>
+                <span class="text-white">I’m a passionate</span>
                 <span style="color:#D63447">Mobile Application Developer,</span>
-                <span> dedicated to creating user-friendly and innovative solutions.</span><br />
-                <span>Let’s turnyour ideas into exceptional digital experiences!<span />
+                <span class="text-white"> dedicated to creating user-friendly and innovative solutions.</span><br />
+                <span class="text-white">Let’s turnyour ideas into exceptional digital experiences!<span />
               </h2>
             </div>
 
