--- a/portfolio_lok.html
+++ b/portfolio_lok.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>FlutterCraft: Crafting Cross-Platform Wonders</title>
+  <title>Divyanshu's CodeCrafts</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
