--- a/index.html
+++ b/index.html
@@ -282,13 +282,13 @@
             </div>
             <div class="col-lg-4 pr-lg-5">
               <h3 class="mb-4 heading-h3"><span class="gsap-reveal">We can make it together</span></h3>
-              <p class="mb-4 gsap-reveal">A Flutter developer with 4+ years of experience is a seasoned professional
+              <p class="mb-4 gsap-reveal">A Flutter developer with 5+ years of experience is a seasoned professional
                 proficient in Dart programming and adept at using the Flutter framework to develop cross-platform mobile
                 applications. They excel in state management, platform integration, design patterns, testing, CI/CD
                 setup, third-party package integration, performance optimization, and problem-solving. They deliver
                 high-quality, efficient apps with a focus on user experience and maintainability.</p>
               <p class="gsap-reveal"><a href="assets/1_Divyanshu's Resume.pdf"
-                  class="btn btn-outline-pill btn-custom-light" download>Download my CV</a></p>
+                  class="btn btn-outline-pill btn-custom-light" download>Download CV</a></p>
             </div>
           </div>
         </div>
