Update the skills and code

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="0">
               <div class="counter-v1 text-center">
                 <span class="number-wrap">
-                  <span class="number number-counter" data-number="97">0</span>
+                  <span class="number number-counter" data-number="100">0</span>
                   <span class="append-text">%</span>
                 </span>
                 <span class="counter-label">Flutter</span>
@@ -367,7 +367,7 @@
             <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
               <div class="counter-v1 text-center">
                 <span class="number-wrap">
-                  <span class="number number-counter" data-number="95">0</span>
+                  <span class="number number-counter" data-number="99">0</span>
                   <span class="append-text">%</span>
                 </span>
                 <span class="counter-label">Dart</span>
@@ -376,7 +376,7 @@
             <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
               <div class="counter-v1 text-center">
                 <span class="number-wrap">
-                  <span class="number number-counter" data-number="75">0</span>
+                  <span class="number number-counter" data-number="90">0</span>
                   <span class="append-text">%</span>
                 </span>
                 <span class="counter-label">Android</span>
@@ -385,7 +385,7 @@
             <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
               <div class="counter-v1 text-center">
                 <span class="number-wrap">
-                  <span class="number number-counter" data-number="76">0</span>
+                  <span class="number number-counter" data-number="92">0</span>
                   <span class="append-text">%</span>
                 </span>
                 <span class="counter-label">IOS</span>
@@ -393,7 +393,9 @@
             </div>
             <br />
             <br />
-            <br /><br /><br />
+            <br />
+            <br />
+            <br />
             <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
               <div class="counter-v1 text-center">
                 <span class="number-wrap">
@@ -409,7 +411,7 @@
                   <span class="number number-counter" data-number="96">0</span>
                   <span class="append-text">%</span>
                 </span>
-                <span class="counter-label">Firebase</span>
+                <span class="counter-label">Firebase & Services</span>
               </div>
             </div>
             <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
@@ -418,7 +420,7 @@
                   <span class="number number-counter" data-number="94">0</span>
                   <span class="append-text">%</span>
                 </span>
-                <span class="counter-label">MVVM</span>
+                <span class="counter-label">MVVM/MVC</span>
               </div>
             </div>
             <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
@@ -427,11 +429,14 @@
                   <span class="number number-counter" data-number="98">0</span>
                   <span class="append-text">%</span>
                 </span>
-                <span class="counter-label">Agile / Clean Architecture</span>
+                <span class="counter-label">Agile Methodology</span>
               </div>
-            </div><br />
+            </div>
             <br />
-            <br /><br /><br />
+            <br />
+            <br />
+            <br />
+            <br />
             <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
               <div class="counter-v1 text-center">
                 <span class="number-wrap">
@@ -466,6 +471,47 @@
                   <span class="append-text">%</span>
                 </span>
                 <span class="counter-label">GitHub / Jira</span>
+              </div>
+            </div>
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+              <div class="counter-v1 text-center">
+                <span class="number-wrap">
+                  <span class="number number-counter" data-number="94">0</span>
+                  <span class="append-text">%</span>
+                </span>
+                <span class="counter-label">Clean Architecture</span>
+              </div>
+            </div>
+            <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+              <div class="counter-v1 text-center">
+                <span class="number-wrap">
+                  <span class="number number-counter" data-number="89">0</span>
+                  <span class="append-text">%</span>
+                </span>
+                <span class="counter-label">Web Socket</span>
+              </div>
+            </div>
+            <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+              <div class="counter-v1 text-center">
+                <span class="number-wrap">
+                  <span class="number number-counter" data-number="67">0</span>
+                  <span class="append-text">%</span>
+                </span>
+                <span class="counter-label">CI/CD</span>
+              </div>
+            </div>
+            <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+              <div class="counter-v1 text-center">
+                <span class="number-wrap">
+                  <span class="number number-counter" data-number="97">0</span>
+                  <span class="append-text">%</span>
+                </span>
+                <span class="counter-label">Flutter Flow</span>
               </div>
             </div>
           </div>
